# tICA

./: .readthedocs.yaml  README.md  Untitled.ipynb  _pyemma_covariance.py  _pyemma_moments.py  _pyemma_running_moments.py  _pyemma_tica.py  pyproject.toml  test_helpers.py  test_pca_mdanalysis.py  test_pyemma.py  test_traj.py
.ipynb_checkpoints/: how_tICA_works-checkpoint.ipynb
docs/: api.rst  conf.py  index.rst  quickstart.rst  requirements.txt  user-guide.rst
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  user-guide.html
examples/: perf_benchmarks.py  trajectory_demo.py
feature_outputs/: feature_contacts.csv  feature_contacts.npy  feature_end_to_end.csv  feature_end_to_end.npy  feature_helix_fraction.csv  feature_helix_fraction.npy  feature_lipid_plane_dist.csv  feature_lipid_plane_dist.npy  feature_phi12.csv  feature_phi12.npy  feature_phi_avg.csv  feature_phi_avg.npy  feature_protein_lipid_sep.csv  feature_protein_lipid_sep.npy  feature_psi_avg.csv  feature_psi_avg.npy  feature_rg_ca.csv  feature_rg_ca.npy  feature_rmsd_ca.csv  feature_rmsd_ca.npy  tica_features.csv  tica_features.npy
feature_outputs/tica_per_feature/: tica_summary.csv
feature_outputs/tica_per_feature/data/: tica_contacts.csv  tica_contacts.npy  tica_phi12.csv  (+17 more)
feature_outputs/tica_per_feature_ic2/: tica_summary.csv
mdakit/: __init__.py  plotting.py  tica.py
tests/: test_features.py  test_package_metadata.py  test_plotting.py  test_tica.py
tica/: __init__.py  featurizer.py  plotting.py
(+27 files in other folders)
